--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-toast-message": "^2.1.5",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-redux": "^7.2.8",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
